      backward compatibility.
    * The 'id_format' argument to the 'ModelTags' constructor now uses "{}"
      string formatting. It still accepts "%s" for backward compatibility and
      converts it to the newer format.
    * Add a space between the widget and the label when rendering 'checkbox()'
      or 'radio()' with the 'label' argument.

    * Implementation changes:

      + Call 'HTML.tag()' rather than attribute access for a slight performance
        improvement.

- webhelpers.html.tools:

    * Implementation changes:

      + Unpack nested tag expression in 'button_to()'.
      + Input helpers call '_input()' to render themselves. It subsumes the
        old '_set_input_attrs()' code.
        

- Port doctests in 'html' subpackage to unit tests.

2.0b5 (2013-11-24)
------------------

- Port to Python 3.  Tested on Python 3.3.2 and 2.7.4.
- Depend on the 'six' distribution for Python 2/3 unification.
- Removed all "u" string prefixes so it should work on Python 3.2. (Prefixes in
  former doctests remain; these have not been supported as doctests since
  2.0b4.)

2.0b4 (2013-11-11)
------------------

- Change test suite to py.test, and convert doctests to unit tests. Some Python
  examples were left in the docs for documentation. Did not port the doctests
  in the 'html' subpackage because of the potential overhaul of that package.

- delete submodules:

  * media (moved ``choose_height()`` to misc. ``get_dimensions()`` has equivalents on
    PyPI; e.g., the ``dimensions`` and ``imagefacts`` distributions)

- webhelpers.containers:

  * Rename ``only_some_keys()`` to ``copy_keys()``, and ``except_keys()`` to 
    ``copy_keys_except()``, and ``extract_keys()`` to ``split_dict()``. In all
    these functions change the ``keys`` argument to ``\*keys``. This parallels
    a previous change to ``del_keys()`` in 2.0b3.

- webhelpers.html.tags:

  * The ``image()`` helper no longer accepts args 'path' or 'use_pil'. In